# src/docs/openapi.json
@@ -316,16 +316,30 @@
           }
         }
       },
-      "ApprovedGivenNamesResponse": {
+      "GivenNameMutationResponse": {
         "type": "object",
         "required": [
-          "approvedGivenNames"
+          "approvedGivenNames",
+          "user"
         ],
         "properties": {
           "approvedGivenNames": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/GivenName"
+            }
+          },
+          "user": {
+            "type": "object",
+            "required": [
+              "promptAccountCreation"
+            ],
+            "properties": {
+              "promptAccountCreation": {
+                "type": "boolean",
+                "description": "The user has reached a point where offering account creation is worthwhile. Always false for users who are not anonymous.",
+                "example": false
+              }
             }
           }
         }
@@ -1010,7 +1024,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ApprovedGivenNamesResponse"
+                  "$ref": "#/components/schemas/GivenNameMutationResponse"
                 }
               }
             }
@@ -1055,7 +1069,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ApprovedGivenNamesResponse"
+                  "$ref": "#/components/schemas/GivenNameMutationResponse"
                 }
               }
             }
@@ -1100,7 +1114,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ApprovedGivenNamesResponse"
+                  "$ref": "#/components/schemas/GivenNameMutationResponse"
                 }
               }
             }
